[gd_scene load_steps=25 format=3 uid="uid://rdhte0vtjf3u"]

[ext_resource type="Texture2D" uid="uid://rkg4lb5dbucj" path="res://LEADERBOARD/ASSETS/DECOR/BackgroundParalax.png" id="1_jcnf2"]
[ext_resource type="Texture2D" uid="uid://caxsq38xbwbwk" path="res://LEADERBOARD/ASSETS/DECOR/Border.png" id="2_lc0na"]
[ext_resource type="Texture2D" uid="uid://b3xief5py23b3" path="res://LEADERBOARD/ASSETS/DECOR/Shine.png" id="2_pgqvi"]
[ext_resource type="Script" uid="uid://bwdk2w0qid4fy" path="res://LEADERBOARD/leaderboard_manager.gd" id="2_vgjx2"]
[ext_resource type="Script" uid="uid://cde560mkmvmxx" path="res://LEADERBOARD/shine_effect.gd" id="3_pgqvi"]
[ext_resource type="Shader" uid="uid://dhvtdl46jy5ej" path="res://MENU/SHADER/vignette.gdshader" id="4_ek7g1"]
[ext_resource type="PackedScene" uid="uid://btu5uwminboh" path="res://LEADERBOARD/leader_board_node.tscn" id="4_urau1"]
[ext_resource type="Script" uid="uid://gxjow6i8oxmm" path="res://LEADERBOARD/leaderboard_camera.gd" id="4_vgjx2"]
[ext_resource type="FontFile" uid="uid://ds0wljn1e2by1" path="res://MENU/THEMES/Pulang.otf" id="6_yb5i1"]
[ext_resource type="Texture2D" uid="uid://bgiox6m3q5t30" path="res://LEADERBOARD/ASSETS/BUTTON/button.png" id="8_jcnf2"]
[ext_resource type="Texture2D" uid="uid://drgqys3jlltu1" path="res://LEADERBOARD/ASSETS/BUTTON/button_hover.png" id="10_kb1wg"]
[ext_resource type="LabelSettings" uid="uid://duqpuwm63qt2c" path="res://LEADERBOARD/THEME/leaderboard_font.tres" id="11_spgon"]
[ext_resource type="Texture2D" uid="uid://ewvhkg4n735f" path="res://LEADERBOARD/ASSETS/BUTTON/scroll_line.png" id="13_rnqp8"]
[ext_resource type="Texture2D" uid="uid://be06esvgkc36j" path="res://LEADERBOARD/ASSETS/BUTTON/scroll_handle.png" id="14_aglnf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pgqvi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aglnf"]
texture = ExtResource("13_rnqp8")
expand_margin_left = 12.0
expand_margin_top = 3.0
expand_margin_right = 12.0
expand_margin_bottom = 3.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jcnf2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vgjx2"]
shader = ExtResource("4_ek7g1")
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.205
shader_parameter/vignette_rgb = Color(0.87451, 0.772549, 0, 0.447059)

[sub_resource type="Animation" id="Animation_yb5i1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ShineEffect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-800, 0)]
}

[sub_resource type="Animation" id="Animation_urau1"]
resource_name = "shine_effect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ShineEffect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.37841, 2.37841),
"update": 0,
"values": [Vector2(-800, 0), Vector2(1800, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ShineEffect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_shine_effect_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j4nr5"]
_data = {
&"RESET": SubResource("Animation_yb5i1"),
&"shine_effect": SubResource("Animation_urau1")
}

[sub_resource type="LabelSettings" id="LabelSettings_j4nr5"]
font = ExtResource("6_yb5i1")
font_size = 64
font_color = Color(0, 0, 0, 0.505882)
outline_size = 22
outline_color = Color(1, 1, 1, 0.745098)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_drhm1"]
texture = ExtResource("10_kb1wg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ek7g1"]
texture = ExtResource("8_jcnf2")

[node name="LEADERBOARD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 1600)

[node name="Background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
custom_minimum_size = Vector2(0, 1600)
offset_right = 1920.0
offset_bottom = 160.0
texture = ExtResource("1_jcnf2")
stretch_mode = 1

[node name="LeaderboardManager" type="Node" parent="."]
script = ExtResource("2_vgjx2")

[node name="ChainStartL" type="StaticBody2D" parent="LeaderboardManager"]
position = Vector2(739, 151)

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/ChainStartL"]
position = Vector2(-1, 2)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode")
length = 160.0
rest_length = 160.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeaderboardManager/ChainStartL"]
shape = SubResource("CircleShape2D_pgqvi")

[node name="ChainStartR" type="StaticBody2D" parent="LeaderboardManager"]
position = Vector2(1171, 147)

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/ChainStartR"]
position = Vector2(-1, 4)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode")
length = 160.0
rest_length = 160.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeaderboardManager/ChainStartR"]
shape = SubResource("CircleShape2D_pgqvi")

[node name="LeaderBoardNode" parent="LeaderboardManager" node_paths=PackedStringArray("JoinL", "JoinR") groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(953, 272)
JoinL = NodePath("Joint2DLeft")
JoinR = NodePath("Joint2DRight")

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode"]
position = Vector2(-215, -109)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode2")
disable_collision = false
length = 5.0
damping = 0.8

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode"]
position = Vector2(209, -109)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode2")
disable_collision = false
length = 5.0
damping = 0.8

[node name="LeaderBoardNode2" parent="LeaderboardManager" node_paths=PackedStringArray("JoinL", "JoinR") groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(975, 399)
JoinL = NodePath("Joint2DLeft")
JoinR = NodePath("Joint2DRight")

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode2"]
position = Vector2(-214, 118)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode3")
disable_collision = false
length = 5.0
damping = 0.8

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode2"]
position = Vector2(209, 122)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode3")
disable_collision = false
length = 5.0
damping = 0.8

[node name="LeaderBoardNode3" parent="LeaderboardManager" node_paths=PackedStringArray("JoinL", "JoinR") groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(959, 534)
JoinL = NodePath("Joint2DLeft")
JoinR = NodePath("Joint2DRight")

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode3"]
position = Vector2(-217, -4)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode4")
disable_collision = false
length = 5.0
damping = 0.8

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode3"]
position = Vector2(205, 3)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode4")
disable_collision = false
length = 5.0
damping = 0.8

[node name="LeaderBoardNode4" parent="LeaderboardManager" node_paths=PackedStringArray("JoinL", "JoinR") groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(959, 667)
JoinL = NodePath("Joint2DLeft")
JoinR = NodePath("Joint2DRight")

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode4"]
position = Vector2(-217, -4)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode5")
disable_collision = false
length = 5.0
damping = 0.8

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode4"]
position = Vector2(205, 3)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode5")
disable_collision = false
length = 5.0
damping = 0.8

[node name="LeaderBoardNode5" parent="LeaderboardManager" node_paths=PackedStringArray("JoinL", "JoinR") groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(959, 800)
JoinL = NodePath("Joint2DLeft")
JoinR = NodePath("Joint2DRight")

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode5"]
position = Vector2(-217, -4)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode6")
disable_collision = false
length = 5.0
damping = 0.8

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode5"]
position = Vector2(205, 3)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode6")
disable_collision = false
length = 5.0
damping = 0.8

[node name="LeaderBoardNode6" parent="LeaderboardManager" node_paths=PackedStringArray("JoinL", "JoinR") groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(961, 926)
JoinL = NodePath("Joint2DLeft")
JoinR = NodePath("Joint2DRight")

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode6"]
position = Vector2(-217, -4)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode7")
disable_collision = false
length = 5.0
damping = 0.8

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode6"]
position = Vector2(205, 3)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode7")
disable_collision = false
length = 5.0
damping = 0.8

[node name="LeaderBoardNode7" parent="LeaderboardManager" node_paths=PackedStringArray("JoinL", "JoinR") groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(955, 1078)
JoinL = NodePath("Joint2DLeft")
JoinR = NodePath("Joint2DRight")

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode7"]
position = Vector2(-217, -4)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode8")
disable_collision = false
length = 5.0
damping = 0.8

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode7"]
position = Vector2(205, 3)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode8")
disable_collision = false
length = 5.0
damping = 0.8

[node name="LeaderBoardNode8" parent="LeaderboardManager" node_paths=PackedStringArray("JoinL", "JoinR") groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(944, 1211)
JoinL = NodePath("Joint2DLeft")
JoinR = NodePath("Joint2DRight")

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode8"]
position = Vector2(-217, -4)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode9")
disable_collision = false
length = 5.0
damping = 0.8

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode8"]
position = Vector2(205, 3)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode9")
disable_collision = false
length = 5.0
damping = 0.8

[node name="LeaderBoardNode9" parent="LeaderboardManager" node_paths=PackedStringArray("JoinL", "JoinR") groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(967, 1345)
JoinL = NodePath("Joint2DLeft")
JoinR = NodePath("Joint2DRight")

[node name="Joint2DLeft" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode9"]
position = Vector2(-217, -4)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode10")
disable_collision = false
length = 5.0
damping = 0.8

[node name="Joint2DRight" type="DampedSpringJoint2D" parent="LeaderboardManager/LeaderBoardNode9"]
position = Vector2(205, 3)
node_a = NodePath("..")
node_b = NodePath("../../LeaderBoardNode10")
disable_collision = false
length = 5.0
damping = 0.8

[node name="LeaderBoardNode10" parent="LeaderboardManager" groups=["panel"] instance=ExtResource("4_urau1")]
position = Vector2(959, 1479)
mass = 0.6
joined = false

[node name="LeaderBoardCamera" type="Camera2D" parent="."]
offset = Vector2(960, 540)
script = ExtResource("4_vgjx2")

[node name="CanvasLayer" type="CanvasLayer" parent="LeaderBoardCamera"]

[node name="ScrollBar" type="VSlider" parent="LeaderBoardCamera/CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -319.0
offset_right = -174.0
offset_bottom = 182.0
grow_horizontal = 0
grow_vertical = 2
theme_override_icons/grabber = ExtResource("14_aglnf")
theme_override_icons/grabber_highlight = ExtResource("14_aglnf")
theme_override_icons/grabber_disabled = ExtResource("14_aglnf")
theme_override_styles/slider = SubResource("StyleBoxTexture_aglnf")
max_value = 2000.0
value = 2000.0
rounded = true
scrollable = false

[node name="FloorLimit" type="StaticBody2D" parent="."]
position = Vector2(960, 3025)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorLimit"]
shape = SubResource("WorldBoundaryShape2D_jcnf2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Vignette" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_vgjx2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ShineEffect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -800.0
offset_right = -800.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_pgqvi")
script = ExtResource("3_pgqvi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ShineEffect"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_j4nr5")
}

[node name="ShineTimer" type="Timer" parent="CanvasLayer/ShineEffect"]
one_shot = true
autostart = true

[node name="Border" type="TextureRect" parent="CanvasLayer"]
top_level = true
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
texture = ExtResource("2_lc0na")

[node name="Label" type="Label" parent="CanvasLayer/Border"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.0
offset_top = 95.0
offset_right = 288.0
offset_bottom = 195.0
grow_horizontal = 2
text = "Leaderboard"
label_settings = SubResource("LabelSettings_j4nr5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -304.0
offset_right = -166.0
offset_bottom = -175.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_drhm1")
theme_override_styles/normal = SubResource("StyleBoxTexture_ek7g1")

[node name="Label" type="Label" parent="CanvasLayer/MenuButton"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 120.0
offset_bottom = 115.0
text = "menu"
label_settings = ExtResource("11_spgon")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="drag_ended" from="LeaderBoardCamera/CanvasLayer/ScrollBar" to="LeaderBoardCamera" method="_on_scroll_bar_drag_ended"]
[connection signal="drag_started" from="LeaderBoardCamera/CanvasLayer/ScrollBar" to="LeaderBoardCamera" method="_on_scroll_bar_drag_started"]
[connection signal="timeout" from="CanvasLayer/ShineEffect/ShineTimer" to="CanvasLayer/ShineEffect" method="_on_shine_timer_timeout"]
